Actions
Bug #12408
openaudiosolo: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/audio/drv/audiosolo/audiosolo.c: In function 'solo_alloc_ctrl': ../../common/io/audio/drv/audiosolo/audiosolo.c:693:13: error: 'fn' may be used uninitialized in this function [-Werror=maybe-uninitialized] 693 | pc->ctrl = audio_dev_add_control(dev->adev, &desc, | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 694 | solo_get_value, fn, pc); | ~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Actions