12408 audiosolo: variable may be used uninitialized

../../common/io/audio/drv/audiosolo/audiosolo.c: In function 'solo_alloc_ctrl':
../../common/io/audio/drv/audiosolo/audiosolo.c:693:13: error: 'fn' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  693 |  pc->ctrl = audio_dev_add_control(dev->adev, &desc,
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  694 |      solo_get_value, fn, pc);
      |      ~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

Change-Id: I3c4fa428262e25125c28c0486f191f9b5669f1f1